# Vakaros.Vkx.Api/Models/Entities/Boat.cs
@@ -8,6 +8,7 @@ public class Boat
     public string? SailNumber { get; set; }
     public Guid BoatClassId { get; set; }
     public string? Description { get; set; }
+    public bool IsPublic { get; set; } = false;
     public DateTimeOffset CreatedAt { get; set; } = DateTimeOffset.UtcNow;
     public BoatClass BoatClass { get; set; } = null!;
     public ICollection<Session> Sessions { get; set; } = [];
