# Vakaros.Vkx.Shared/Dtos/Boats/CreateBoatRequest.cs
@@ -3,4 +3,5 @@ namespace Vakaros.Vkx.Shared.Dtos.Boats;
 public record CreateBoatRequest(string Name,
                                 string? SailNumber,
                                 Guid BoatClassId,
-                                string? Description);
+                                string? Description,
+                                bool? IsPublic);
