# Vakaros.Vkx.Shared/Dtos/Courses/CourseLegRequest.cs
@@ -1,3 +1,8 @@
 namespace Vakaros.Vkx.Shared.Dtos.Courses;
 
-public record CourseLegRequest(Guid MarkId, string? LegName);
+public record CourseLegRequest(
+    Guid MarkId,
+    Guid? GateMarkId,
+    string? LegName,
+    string LegType,
+    string PassingSide);
